--- a/index.html
+++ b/index.html
@@ -28,28 +28,34 @@
             <li class="navigation__element"><a href="" class="navigation__link">Design</a></li>
         </ul>
 
-        <section class="note note--nav">
-            <div class="note__symbol">?</div>
-            <h2 class="note__header note__header--nav note__header--question">About</h2>
-            <p class="note__text note__text--nav">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci
-                aliquam dicta
-                dignissimos ducimus est impedit libero molestiae quis, quo sint tempora velit voluptas,
-                voluptatibus. Ab consequatur debitis dicta dolores enim error impedit inventore ipsa ipsam molestias
-                mollitia nam, nulla odio optio pariatur porro possimus praesentium quam, reiciendis, similique.
-                Accusantium, labore!</p>
-        </section>
+        <section class="info">
+            <div class="info__notes-wrapper">
+                <section class="info__note note note--nav">
+                    <div class="note__symbol note__symbol--question">?</div>
+                    <h2 class="note__header note__header--nav note__header--question">About</h2>
+                    <p class="note__text note__text--nav">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                        Adipisci
+                        aliquam dicta
+                        dignissimos ducimus est impedit libero molestiae quis, quo sint tempora velit voluptas,
+                        voluptatibus. Ab consequatur debitis dicta dolores enim error impedit inventore ipsa ipsam
+                        molestias
+                        mollitia nam, nulla odio optio pariatur porro possimus praesentium quam, reiciendis, similique.
+                        Accusantium, labore!</p>
+                </section>
 
-        <section class="note note--nav">
-            <div class="note__symbol">!</div>
-            <h2 class="note__header note__header--nav note__header--exclamation">Some information</h2>
-            <p class="note__text--nav">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A, at atque dolor
-                eum
-                odit officiis pariatur porro veniam? Aperiam atque, culpa cupiditate dignissimos enim esse fuga
-                fugit, inventore ipsam maxime praesentium repellat similique, temporibus. Ab, accusantium amet
-                dignissimos eos et excepturi fugit hic laudantium nihil odio tempora vero. Perspiciatis,
-                placeat.</p>
+                <section class="info__note note note--nav">
+                    <div class="note__symbol note__symbol--exclamation">!</div>
+                    <h2 class="note__header note__header--nav note__header--exclamation">Some information</h2>
+                    <p class="note__text--nav">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A, at atque
+                        dolor
+                        eum
+                        odit officiis pariatur porro veniam? Aperiam atque, culpa cupiditate dignissimos enim esse fuga
+                        fugit, inventore ipsam maxime praesentium repellat similique, temporibus. Ab, accusantium amet
+                        dignissimos eos et excepturi fugit hic laudantium nihil odio tempora vero. Perspiciatis,
+                        placeat.</p>
+                </section>
+            </div>
         </section>
-
     </header>
 
     <ul class="tags tags--tablet">
@@ -249,5 +255,7 @@
             </ul>
         </aside>
     </div>
+
+    <script src="scripts/script.js"></script>
 </body>
 </html>
