--- a/index.html
+++ b/index.html
@@ -33,26 +33,23 @@
                 <section class="info__note note note--nav">
                     <div class="note__symbol note__symbol--question">?</div>
                     <h2 class="note__header note__header--nav note__header--question">About</h2>
-                    <p class="note__text note__text--nav">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                        Adipisci
-                        aliquam dicta
-                        dignissimos ducimus est impedit libero molestiae quis, quo sint tempora velit voluptas,
-                        voluptatibus. Ab consequatur debitis dicta dolores enim error impedit inventore ipsa ipsam
-                        molestias
-                        mollitia nam, nulla odio optio pariatur porro possimus praesentium quam, reiciendis, similique.
-                        Accusantium, labore!</p>
+                    <p class="note__text note__text--nav">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab,
+                        enim esse eum
+                        facilis laudantium nihil optio perferendis quaerat qui repellat sed, sequi tempora tempore totam
+                        voluptatem? Alias aliquid amet animi assumenda autem beatae consequuntur cum eaque expedita illo
+                        nobis numquam praesentium quia saepe sequi, similique sunt voluptate? Beatae eius fuga
+                        praesentium
+                        quae quisquam quos recusandae ut. Labore.</p>
                 </section>
 
                 <section class="info__note note note--nav">
                     <div class="note__symbol note__symbol--exclamation">!</div>
                     <h2 class="note__header note__header--nav note__header--exclamation">Some information</h2>
-                    <p class="note__text--nav">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A, at atque
-                        dolor
-                        eum
-                        odit officiis pariatur porro veniam? Aperiam atque, culpa cupiditate dignissimos enim esse fuga
-                        fugit, inventore ipsam maxime praesentium repellat similique, temporibus. Ab, accusantium amet
-                        dignissimos eos et excepturi fugit hic laudantium nihil odio tempora vero. Perspiciatis,
-                        placeat.</p>
+                    <p class="note__text--nav">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium
+                        aliquam,
+                        amet assumenda blanditiis consequatur cupiditate deserunt error expedita explicabo fugiat ipsum
+                        itaque magnam, maiores modi molestiae nobis, odit porro quaerat quasi quia recusandae reiciendis
+                        repellendus sed similique temporibus tenetur voluptates.</p>
                 </section>
             </div>
         </section>
@@ -141,8 +138,7 @@
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus at deleniti dolorem doloremque
                     exercitationem fugit iste, labore laudantium libero minus necessitatibus non nostrum officia
                     quibusdam quisquam repellat tempora temporibus veniam voluptas voluptatibus! Accusantium aspernatur
-                    atque eaque et ex ipsa libero numquam odit officia quod ratione sunt, unde. Accusantium aliquid
-                    corporis dicta, eveniet fugit iure, nemo quia quisquam repellendus reprehenderit soluta.
+                    atque eaque et ex ipsa libero numquam odit officia quod ratione sunt, unde.
                 </p>
             </section>
 
@@ -222,21 +218,20 @@
             <section class="note">
                 <div class="note__symbol">?</div>
                 <h2 class="note__header note__header--question">About</h2>
-                <p class="note__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aliquam dicta
-                    dignissimos ducimus est impedit libero molestiae quis, quo sint tempora velit voluptas,
-                    voluptatibus. Ab consequatur debitis dicta dolores enim error impedit inventore ipsa ipsam molestias
-                    mollitia nam, nulla odio optio pariatur porro possimus praesentium quam, reiciendis, similique.
-                    Accusantium, labore!</p>
+                <p class="note__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab, enim esse eum
+                    facilis laudantium nihil optio perferendis quaerat qui repellat sed, sequi tempora tempore totam
+                    voluptatem? Alias aliquid amet animi assumenda autem beatae consequuntur cum eaque expedita illo
+                    nobis numquam praesentium quia saepe sequi, similique sunt voluptate? Beatae eius fuga praesentium
+                    quae quisquam quos recusandae ut. Labore.</p>
             </section>
 
             <section class="note">
                 <div class="note__symbol">!</div>
                 <h2 class="note__header note__header--exclamation">Some information</h2>
-                <p class="note__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A, at atque dolor eum
-                    odit officiis pariatur porro veniam? Aperiam atque, culpa cupiditate dignissimos enim esse fuga
-                    fugit, inventore ipsam maxime praesentium repellat similique, temporibus. Ab, accusantium amet
-                    dignissimos eos et excepturi fugit hic laudantium nihil odio tempora vero. Perspiciatis,
-                    placeat.</p>
+                <p class="note__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium aliquam,
+                    amet assumenda blanditiis consequatur cupiditate deserunt error expedita explicabo fugiat ipsum
+                    itaque magnam, maiores modi molestiae nobis, odit porro quaerat quasi quia recusandae reiciendis
+                    repellendus sed similique temporibus tenetur voluptates.</p>
             </section>
 
             <ul class="tags">
