--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
         <section class="info">
             <div class="info__notes-wrapper">
-                <section class="info__note note note--nav">
+                <section class="info__note note note--nav note--nav-question">
                     <div class="note__symbol note__symbol--question">?</div>
                     <h2 class="note__header note__header--nav note__header--question">About</h2>
                     <p class="note__text note__text--nav">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab,
@@ -42,7 +42,7 @@
                         quae quisquam quos recusandae ut. Labore.</p>
                 </section>
 
-                <section class="info__note note note--nav">
+                <section class="info__note note note--nav note--nav-exclamation">
                     <div class="note__symbol note__symbol--exclamation">!</div>
                     <h2 class="note__header note__header--nav note__header--exclamation">Some information</h2>
                     <p class="note__text--nav">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium
