--- a/index.html
+++ b/index.html
@@ -34,22 +34,20 @@
                     <div class="note__symbol note__symbol--question">?</div>
                     <h2 class="note__header note__header--nav note__header--question">About</h2>
                     <p class="note__text note__text--nav">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab,
-                        enim esse eum
-                        facilis laudantium nihil optio perferendis quaerat qui repellat sed, sequi tempora tempore totam
-                        voluptatem? Alias aliquid amet animi assumenda autem beatae consequuntur cum eaque expedita illo
-                        nobis numquam praesentium quia saepe sequi, similique sunt voluptate? Beatae eius fuga
-                        praesentium
-                        quae quisquam quos recusandae ut. Labore.</p>
+                        enim esse eum facilis laudantium nihil optio perferendis quaerat qui repellat sed, sequi tempora
+                        tempore totam voluptatem? Alias aliquid amet animi assumenda autem beatae consequuntur cum eaque
+                        expedita illo nobis numquam praesentium quia saepe sequi, similique sunt voluptate? Beatae eius
+                        fuga praesentium quae quisquam quos recusandae ut. Labore.</p>
                 </section>
 
                 <section class="info__note note note--nav note--nav-exclamation">
                     <div class="note__symbol note__symbol--exclamation">!</div>
                     <h2 class="note__header note__header--nav note__header--exclamation">Some information</h2>
                     <p class="note__text--nav">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium
-                        aliquam,
-                        amet assumenda blanditiis consequatur cupiditate deserunt error expedita explicabo fugiat ipsum
-                        itaque magnam, maiores modi molestiae nobis, odit porro quaerat quasi quia recusandae reiciendis
-                        repellendus sed similique temporibus tenetur voluptates.</p>
+                        aliquam, amet assumenda blanditiis consequatur cupiditate deserunt error expedita explicabo
+                        fugiat ipsum itaque magnam, maiores modi molestiae nobis, odit porro quaerat quasi quia
+                        recusandae reiciendis repellendus sed similique temporibus tenetur voluptates.
+                    </p>
                 </section>
             </div>
         </section>
@@ -231,7 +229,8 @@
                 <p class="note__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium aliquam,
                     amet assumenda blanditiis consequatur cupiditate deserunt error expedita explicabo fugiat ipsum
                     itaque magnam, maiores modi molestiae nobis, odit porro quaerat quasi quia recusandae reiciendis
-                    repellendus sed similique temporibus tenetur voluptates.</p>
+                    repellendus sed similique temporibus tenetur voluptates.
+                </p>
             </section>
 
             <ul class="tags">
