--- a/index.html
+++ b/index.html
@@ -49,6 +49,26 @@
                         recusandae reiciendis repellendus sed similique temporibus tenetur voluptates.
                     </p>
                 </section>
+
+                <ul class="tags tags--mobile">
+                    <div class="tags__symbol">
+                        <svg class="tags__icon-tag" aria-hidden="true">
+                            <use xlink:href="styles/sprites/sprite.svg#icon-tag"></use>
+                        </svg>
+                    </div>
+                    <li class="tags__element">Raccoon</li>
+                    <li class="tags__element">Raccoon</li>
+                    <li class="tags__element">Coon</li>
+                    <li class="tags__element">Dog</li>
+                    <li class="tags__element">Cat</li>
+                    <li class="tags__element">Developer</li>
+                    <li class="tags__element">Raccoon</li>
+                    <li class="tags__element">Raccoon</li>
+                    <li class="tags__element">Coon</li>
+                    <li class="tags__element">Dog</li>
+                    <li class="tags__element">Cat</li>
+                    <li class="tags__element">Developer</li>
+                </ul>
             </div>
         </section>
     </header>
